# rtype

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  index.md
.github/workflows/: build.yml  doxygen.yml
assets/fonts/: texte.csv
doc/html/: Animation_8component_8hpp_source.html  Animation_8system_8hpp_source.html  AvailableComponents_8hpp_source.html  BaseBullet_8component_8hpp_source.html  BoosterActive_8component_8hpp_source.html  Booster_8component_8hpp_source.html  Booster_8system_8hpp_source.html  Bullets_8system_8hpp_source.html  Button_8component_8hpp_source.html  CheckBox_8component_8hpp_source.html  ClientInfo_8hpp_source.html  Clock_8hpp_source.html  Collision_8component_8hpp_source.html  Collision_8event_8hpp_source.html  Collision_8subscriber_8hpp_source.html  ComponentsType_8hpp_source.html  Components_8hpp_source.html  Cursor_8component_8hpp_source.html  DeathAnimation_8component_8hpp_source.html  DeathAnimation_8system_8hpp_source.html  Drawable_8component_8hpp_source.html  EnemyAttack_8component_8hpp_source.html  EnemyData_8hpp_source.html  EnemyMakers_8hpp_source.html  EnemyMovements_8component_8hpp_source.html  EnemyQueue_8component_8hpp_source.html  Enemy_8component_8hpp_source.html  Enemy_8system_8hpp_source.html  Engine_8hpp_source.html  EnnemyDeath_8event_8hpp_source.html  EnnemyDeath_8subscriber_8hpp_source.html  Entities_8hpp_source.html  Entity_8hpp_source.html  EventSubscriber_8hpp_source.html  ExcludeCollision_8component_8hpp_source.html  GameWorld_8hpp_source.html  Health_8component_8hpp_source.html  Health_8system_8hpp_source.html  Inputs_8system_8hpp_source.html  KeyPressed_8event_8hpp_source.html  (+566 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+10 more)
doc/latex/: Animation_8component_8hpp_source.tex  Animation_8system_8hpp_source.tex  AvailableComponents_8hpp_source.tex  BaseBullet_8component_8hpp_source.tex  BoosterActive_8component_8hpp_source.tex  Booster_8component_8hpp_source.tex  Booster_8system_8hpp_source.tex  Bullets_8system_8hpp_source.tex  Button_8component_8hpp_source.tex  CheckBox_8component_8hpp_source.tex  ClientInfo_8hpp_source.tex  Clock_8hpp_source.tex  Collision_8component_8hpp_source.tex  Collision_8event_8hpp_source.tex  Collision_8subscriber_8hpp_source.tex  ComponentsType_8hpp_source.tex  Components_8hpp_source.tex  Cursor_8component_8hpp_source.tex  DeathAnimation_8component_8hpp_source.tex  DeathAnimation_8system_8hpp_source.tex  Drawable_8component_8hpp_source.tex  EnemyAttack_8component_8hpp_source.tex  EnemyData_8hpp_source.tex  EnemyMakers_8hpp_source.tex  EnemyMovements_8component_8hpp_source.tex  EnemyQueue_8component_8hpp_source.tex  Enemy_8component_8hpp_source.tex  Enemy_8system_8hpp_source.tex  Engine_8hpp_source.tex  EnnemyDeath_8event_8hpp_source.tex  EnnemyDeath_8subscriber_8hpp_source.tex  Entities_8hpp_source.tex  Entity_8hpp_source.tex  EventSubscriber_8hpp_source.tex  ExcludeCollision_8component_8hpp_source.tex  GameWorld_8hpp_source.tex  Health_8component_8hpp_source.tex  Health_8system_8hpp_source.tex  Inputs_8system_8hpp_source.tex  KeyPressed_8event_8hpp_source.tex  (+245 more)
docs/: ECS.md  Engine.md  NetworkProtocol.md  R-Type.md
docs/Engine/: Components.md  Events.md  Server.md  Systems.md
include/ECS/: Clock.hpp  Components.hpp  Entity.hpp  EventSubscriber.hpp  System.hpp  Utilities.hpp  World.hpp
include/Engine/: Engine.hpp
include/Engine/Components/: Animation.component.hpp  Button.component.hpp  CheckBox.component.hpp  Collision.component.hpp  Cursor.component.hpp  Drawable.component.hpp  ExcludeCollision.component.hpp  LayeredAnimation.component.hpp  LayeredRenderable.component.hpp  Link.component.hpp  Menu.component.hpp  Moving.component.hpp  Music.component.hpp  Options.component.hpp  Parallax.component.hpp  Position.component.hpp  Renderable.component.hpp  Score.component.hpp  Speed.component.hpp  Text.component.hpp  TextInput.component.hpp  View.component.hpp  WorldMoveProgress.component.hpp
include/Engine/Events/: Collision.event.hpp  KeyPressed.event.hpp  KeyReleased.event.hpp  Resize.event.hpp
include/Engine/Server/: ClientInfo.hpp  Network.hpp  WaitingRoom.hpp
include/Engine/Systems/: Animation.system.hpp  Inputs.system.hpp  Options.system.hpp  Parallax.system.hpp  Physics.system.hpp  Renderer.system.hpp  Score.system.hpp  Sound.system.hpp  UI.system.hpp  WorldMove.system.hpp
include/Engine/Utils/: Math.hpp
include/public/: AvailableComponents.hpp  ComponentsType.hpp
scripts/: init.sh
src/: main.cpp
src/Engine/: Engine.cpp
src/Engine/Server/: Network.cpp  ServerHandler.cpp
src/Engine/Server/Packets/: HandlePackets.cpp  ReceivePackets.cpp  SendPackets.cpp
src/Engine/Server/Packets/Serialization/: Deserialize.cpp  Serialize.cpp
src/Engine/Systems/: Animation.system.cpp  Inputs.system.cpp  Options.system.cpp  Parallax.system.cpp  Physics.system.cpp  Renderer.system.cpp  Score.system.cpp  Sound.system.cpp  UI.system.cpp  WorldMove.system.cpp
